TAG: qcreports_db-4-4-1-35
TAG: qcreports_db-4-4-1-34
DATE: 09/08/2011
STAFF: lec
CHANGES:
1) TR10837/weekly/PHENO_Images.py

TAG: qcreports_db-4-4-1-33
DATE: 09/08/2011
STAFF: lec
CHANGES:
1) dbradt changed to jrecla

TAG: qcreports_db-4-4-1-32
DATE: 08/29/2011
STAFF: lec
CHANGES:
1) MRK_AllNoGO.py

TAG: qcreports_db-4-4-1-31
DATE: 08/25/2011
STAFF: lec
CHANGES:
1) TR10823/weekly/PHENO_ImageCheck.sql
2) TR10778/mgd/GXD_DupGenotype.py
3) TR10822/weekly/ALL_NewAlleles.py

TAG: qcreports_db-4-4-1-30
DATE: 08/22/2011
STAFF: lec
CHANGES:
1) TR10813/MRK_GOIEA.py
2) replace 're' with 'string'
3) TR10816/MGI_GenoNoMarker.sql

TAG: qcreports_db-4-4-1-29
DATE: 08/03/2011
STAFF: lec
CHANGES: qcr.html
1) TR10801/MRK_NoNCBI.py

TAG: not tagged
DATE: 07/21/2011
STAFF: lec
CHANGES: qcr.html
1) moved "name = a.name" to "a.name as name"
   for compliance with ansi sql

TAG: no tag
DATE: 06/23/2011
STAFF: lec
CHANGES: qcr.html
1) moved "name = a.name" to "a.name as name"
   for compliance with ansi sql

TAG: qcreports_db-4-4-1-28
DATE: 06/20/2011
STAFF: sc
CHANGES: qcr.html
1) added genetrapload to Data Loads section

TAG: qcreports_db-4-4-1-27
DATE: 06/20/2011
STAFF: lec
CHANGES:
1) TR01761/PRB_StrainByDate.sql

TAG: qcreports_db-4-4-1-26
TAG: qcreports_db-4-4-1-25
DATE: 06/16/2011
STAFF: lec
CHANGES:
1) TR10731/GXD_SpecTheiler.sql

TAG: qcreports_db-4-4-1-24
DATE: 05/18/2011
STAFF: lec
CHANGES:
1) TR10721/GXD_OneGenePapers.py

TAG: qcreports_db-4-4-1-23
DATE: 05/18/2011
STAFF: lec
CHANGES:
1) TR10720/VOC_GOObsolete.py

TAG: qcreports_db-4-4-1-22
DATE: 05/17/2011
STAFF: lec
CHANGES:
1) TR10629/GXD_Stats.py/J:171409

TAG: qcreports_db-4-4-1-21
DATE: 05/09/2011
STAFF: lec
CHANGES:
1) TR10703/GXD_FullCodeable.py

TAG: qcreports_db-4-4-1-20
DATE: 04/26/2011
STAFF: sc
CHANGES: TR10336

TAG: qcreports_db-4-4-1-19
DATE: 04/20/2011
STAFF: sc
CHANGES: TR10653
1) fixed bug in weekly/VOC_MPNewTerms.py

TAG: qcreports_db-4-4-1-18
DATE: 04/11/2011
STAFF: lec
CHANGES:
1) TR10668/MRK_NoGO.py