@@ -16,6 +16,9 @@
 #
 # History
 #
+# 09/26/2011    sc
+#       TR10866/ include GM if no raw biotype; needed outer join
+#
 # 03/07/2011	lec
 #	TR626/add rawbiotype from SEQ_GeneModel
 #
@@ -89,14 +92,17 @@ results = db.sql('''select gm.accid as ensemblGeneModelNoAssoc, s.rawbiotype
     where not exists (select 1 
     from #ensemblGeneAssoc ga 
     where ga.accid = gm.accid) 
-    and gm._Sequence_key = s._Sequence_key
+    and gm._Sequence_key *= s._Sequence_key
     order by gm.accID
     ''', 'auto')
 print "done third query and writing out results"
 
 for r in results:
     fp.write(r['ensemblGeneModelNoAssoc'] + TAB)
-    fp.write(r['rawbiotype'] + CRT)
+    raw = r['rawbiotype']
+    if raw == None:
+	raw = ''
+    fp.write(raw + CRT)
 
 fp.write('\n(%d rows affected)\n' % (len(results)))
 
