@@ -1,3 +1,10 @@
+TAG: qcreports_db-4-4-1-36
+DATE: 09/26/2011
+STAFF: sc
+CHANGES:
+1) TR10866 - MRK_NoVEGA.rpt - include gene model when no raw biotype
+	also did MRK_NoENSEMBL.rpt because it includes raw biotype
+
 TAG: qcreports_db-4-4-1-35
 TAG: qcreports_db-4-4-1-34
 DATE: 09/08/2011
